--- a/.gitconfig
+++ b/.gitconfig
@@ -14,3 +14,10 @@
   br = branch
   ci = commit
   st = status
+[credential]
+	helper = osxkeychain
+[filter "lfs"]
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
